# agent-bridle

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  justfile
.githooks/: pre-push
.github/workflows/: ci.yml  formal.yml  nightly-windows.yml  release.yml  security-audit.yml  weekly-regression.yml
agent-bridle/: Cargo.toml
agent-bridle-aclaunch/: Cargo.toml
agent-bridle-aclaunch/src/: main.rs
agent-bridle-aclaunch/tests/: kernel_proofs.rs  net_proofs.rs
agent-bridle-ceremony/: Cargo.toml
agent-bridle-ceremony/src/: authority.rs  boundary.rs  chain_store.rs  lib.rs  signed_object.rs
agent-bridle-config/: Cargo.toml
agent-bridle-config/src/: lib.rs
agent-bridle-core/: Cargo.toml  README.md
agent-bridle-core/src/: config.rs  context.rs  envelope.rs  error.rs  gate.rs  lib.rs  net_proxy.rs  operator.rs  policy.rs  registry.rs  report.rs  rootfs.rs  sandbox.rs  spawn.rs  step_up.rs  tool.rs  unbridle.rs
agent-bridle-gateway/: Cargo.toml
agent-bridle-gateway/src/: lib.rs  main.rs  mock.rs  wire.rs
agent-bridle-gateway/tests/: e2e.rs
agent-bridle-gateway/web/: app.js  index.html  style.css
agent-bridle-jaild/: Cargo.toml
agent-bridle-jaild/src/: broker.rs  client.rs  lib.rs  linux.rs  protocol.rs  vm.rs
agent-bridle-mcp/: Cargo.toml  README.md
agent-bridle-mcp/src/: caveats_source.rs  handlers.rs  main.rs  server.rs  tty_approver.rs
agent-bridle-mcp/tests/: mcp_carried_coreutils.rs  mcp_stdio.rs
agent-bridle-py/: Cargo.toml  README.md  pyproject.toml
agent-bridle-py/src/: lib.rs
agent-bridle-py/tests/: test_invoke.py
agent-bridle-tool-shell/: Cargo.toml  README.md
agent-bridle-tool-shell/src/: brush_shell.rs  brush_worker.rs  caveat_interceptor.rs  coreutils_dispatch.rs  host_shell.rs  host_shell.schema.json  lib.rs  net_proxy.rs  output_observer.rs  parse.rs  shell_tool.rs  shell_tool.schema.json
agent-bridle-tool-shell/src/coreutils/: base32.rs  base64.rs  basename.rs  cat.rs  cksum.rs  comm.rs  coreutils.rs  cp.rs  cut.rs  dirname.rs  echo.rs  expand.rs  fold.rs  head.rs  join.rs  ln.rs  ls.rs  mkdir.rs  mv.rs  nl.rs  paste.rs  readlink.rs  realpath.rs  rm.rs  rmdir.rs  sha256sum.rs  sort.rs  split.rs  stat.rs  tac.rs  tail.rs  test.rs  touch.rs  tr.rs  truncate.rs  unexpand.rs  uniq.rs  wc.rs
agent-bridle-tool-shell/tests/: brush_real.rs  carried_coreutils.rs  host_shell_real.rs  output_observer.rs  real_spawn.rs  unbridle.rs  unbridle_autonomous.rs
agent-bridle-tool-web/: Cargo.toml  README.md
agent-bridle-tool-web/src/: lib.rs  net_guard.rs  web_fetch.rs  web_fetch.schema.json
agent-bridle-tool-web/tests/: net_leash.rs
agent-bridle/src/: lib.rs
agent-bridle/tests/: egress_proxy_reqwest.rs  output_observer_facade.rs
docs/: DESIGN.md  PRIVACY.md  TOOLCHAIN.md
docs/adr/: 0001-command-decomposition-and-ocap-layers.md  0002-ocap-design-contract-and-hard-invariants.md  0003-confined-shell-stub-and-the-fail-open-allowance.md  0004-axis-granular-confinement-honesty-and-the-un-stub-gate.md  0005-decouple-shell-engine-from-boundary.md  0006-per-os-l3-backends-and-optional-engines.md  0007-step-up-consumability-contract.md  0008-external-consumer-dependency-strategy.md  0009-cross-platform-confinement-strategy.md  0010-command-packs-data-driven-l1-escape-surface.md  0011-landlock-exec-axis-co-confinement.md  0012-fence-strength-derived-from-caveats.md  0013-macos-seatbelt-exec-axis.md  0013-tier2-program-identity-minimal-rootfs.md  0014-macos-seatbelt-exec-axis.md  0015-macos-seatbelt-net-loopback-and-remote-host-frontier.md  0016-macos-egress-proxy-for-remote-host-net-allowlists.md  0017-configurability-and-honesty-disclosure-split.md  0018-first-class-unbridle.md  0018-sandboxed-host-shell-engine.md  0019-sandboxed-host-shell-engine.md  0020-authority-product-lattice.md  0021-store-append-cas-now-bvp-next.md  0022-signed-object-grammar.md  0023-three-tier-proof-discipline.md  0024-canonical-codec-strategy.md
docs/design/: llm-flight-recorder-and-webauthn-presence.md  ocap-policy-schema.md
docs/reviews/: 2026-06-24-ocap-shell-axis-coverage-review.md  2026-07-04-seatbelt-live-owner-mac.md
docs/spec/: PRIMER.md  README.md  ROADMAP.md  ceremony-contract.md  chain-store-profile.md  enrollment-protocol.md  identity-lifecycle.md  rendering-security-profile.md  signed-object-profile.md  suite.toml
docs/superpowers/plans/: 2026-07-16-p1-signed-object-formalization.md
docs/superpowers/specs/: 2026-07-15-formal-ceremony-kernel-design.md
formal/: AxiomAudit.lean  Ceremony.lean  Gate.lean  README.md  Tests.lean  lake-manifest.json  lakefile.toml
formal/Ceremony/P0/: Authority.lean  Boundary.lean
formal/Ceremony/P1/: PreimageCodec.lean  SignedObject.lean
formal/Tests/: P1Counterexamples.lean  PreimageCodecContracts.lean  SignedObjectContracts.lean
formal/lean/: Authority.lean
formal/refinement/: .gitignore  AgentBridleCeremony.lean  README.md  Refinement.lean  aeneas-commit.txt  lake-manifest.json  lakefile.lean  regenerate.sh  setup.sh
formal/refinement/AgentBridleCeremony/: Funs.lean  FunsExternal.lean  Types.lean  TypesExternal.lean
formal/tla/: .gitignore  CeremonyStore.cfg  CeremonyStore.tla  EnforcementGate.tla  EnforcementGate_cacheGrantFence.cfg  EnforcementGate_checkAtExec.cfg
integrations/charter-bridle/: Cargo.toml
integrations/charter-bridle/src/: lib.rs
integrations/charter-eval/: Cargo.toml
integrations/charter-eval/src/: main.rs
integrations/pi-bridle/: README.md  index.ts  package.json
prototypes/phase1d-codec/: .gitignore  README.md  RESULTS.md  check.sh
prototypes/phase1d-codec/dart/: pubspec.yaml
prototypes/phase1d-codec/python/: canon.py
prototypes/phase1d-codec/rust/: Cargo.toml
prototypes/phase1d-codec/rust/src/: main.rs
prototypes/phase1d-codec/ts/: canon.mjs  package-lock.json  package.json
prototypes/phase1d-codec/vectors/: dart.json  python.json  rust.json  ts.json
scripts/: check-docs-accuracy.sh  check-internal-specifics.sh  jail-dev.sh
src/coreutils/: ls.rs
