[workspace]
resolver = "2"
members = [
    "agent-bridle-core",
    "agent-bridle-tool-shell",
    "agent-bridle-tool-web",
    "agent-bridle",
    "agent-bridle-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Gilamonster-Foundation/agent-bridle"
authors = ["Shawn Hartsock <hartsock@users.noreply.github.com>"]

[workspace.dependencies]
# In-workspace crates (lock-step version).
agent-bridle-core = { version = "0.1.0", path = "agent-bridle-core" }
agent-bridle-tool-shell = { version = "0.1.0", path = "agent-bridle-tool-shell" }
agent-bridle-tool-web = { version = "0.1.0", path = "agent-bridle-tool-web" }
# `default-features = false` here so `agent-bridle-mcp` controls the facade's
# feature set (its own `shell`/`--no-default-features` forward through).
agent-bridle = { version = "0.1.0", path = "agent-bridle", default-features = false }

# The leash. One canonical authority type, shared across the whole agent line.
agent-mesh-protocol = "0.6"

# Core (lean) deps — these are the ONLY non-mesh deps allowed in core.
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"

# Leaf-tool-only deps (never enter core or a host's default build).
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
# brush — pinned to OUR fork at the commit that adds the `CommandInterceptor`
# exec/open hook (`extensions::CommandInterceptor`, wired at the single
# external-spawn funnel + `Shell::open_file`). All three crates share one
# git+rev so cargo resolves them to a single checkout. This closes the
# path-separator exec bypass in-process, cross-OS (DESIGN §6). NOTE: a git dep
# means `agent-bridle-tool-shell` cannot publish to crates.io until the hook is
# upstreamed into `reubeno/brush`; tracked as out-of-scope until then.
brush-core = { git = "https://github.com/hartsock/brush", rev = "4e65a0627d4d363a5af473bc68bd40862ce9f011" }
brush-builtins = { git = "https://github.com/hartsock/brush", rev = "4e65a0627d4d363a5af473bc68bd40862ce9f011" }
brush-coreutils-builtins = { git = "https://github.com/hartsock/brush", rev = "4e65a0627d4d363a5af473bc68bd40862ce9f011" }

# Web-tool-only deps (feature `web` in agent-bridle-tool-web). rustls, NOT
# openssl, so the client is portable and builds on Windows with no system
# OpenSSL. `charset`/`gzip` for real-world pages; default features off so we do
# not drag in the openssl-tls path.
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "charset",
    "gzip",
] }
url = "2"
hickory-resolver = "0.24"
dom_smoothie = "0.17"
htmd = "0.5"

[profile.release]
# strip + thin-LTO is the verified real-world trigger for linker DCE silently
# dropping a self-registered (`inventory`) tool from `tools/list` (DESIGN §5).
# We exercise that hazard deliberately, but because P0 uses EXPLICIT
# `Registry::builder()` registration (anchored by facade `pub use`), it is safe.
strip = true
lto = "thin"
