[package]
name = "agent-bridle-core"
description = "Capability-enforcement core for agent-bridle: the Tool trait, Gate (mint-token enforcement), Registry, and Caveats leash."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints.rust]
unsafe_code = "forbid"

[features]
default = []
# Real Landlock ruleset is a documented P3 TODO. The feature exists so the
# plumbing (SandboxKind, Sandbox trait, sandbox_kind field) is in place; for
# P0 it still resolves to a NoopSandbox reporting SandboxKind::None.
linux-landlock = []

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
agent-mesh-protocol = { workspace = true }
