[package]
name = "agent-bridle-core"
description = "Capability-enforcement core for agent-bridle: the Tool trait, Gate (mint-token enforcement), Registry, and Caveats leash."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
# crates.io front-page metadata (ADR 0008 — the externally-consumed crate).
# `readme` defaults to the crate-root README.md (present).
keywords = ["capability", "ocap", "security", "sandbox", "agent"]
categories = ["development-tools"]

[lints.rust]
unsafe_code = "forbid"

[features]
default = []
# Real, kernel-enforced Landlock ruleset (Linux only). Enables the `landlock`
# dependency and the `LandlockSandbox` (see src/sandbox.rs). First increment
# confines the `fs_write` axis; without this feature (or off-Linux) the sandbox
# is the advisory NoopSandbox reporting SandboxKind::None. ADR 0001 (L3).
linux-landlock = ["dep:landlock"]
# Real, kernel-enforced Seatbelt profile (macOS only). Enables the
# `SeatbeltSandbox` (see src/sandbox.rs), which confines a spawned program via
# the `sandbox-exec(1)` wrapper — no extra dependency and no FFI (core forbids
# `unsafe`), so the feature is empty here. Confines `fs_write` + `fs_read`;
# without it (or off-macOS) the sandbox is the advisory NoopSandbox reporting
# SandboxKind::None. ADR 0006 (per-OS L3) / ADR 0009 (cross-platform).
macos-seatbelt = []
# Windows AppContainer process sandbox (Windows only). AppContainer is applied
# at process creation via SECURITY_CAPABILITIES, not by restricting the current
# thread; see src/sandbox.rs and agent-bridle#51.
windows-appcontainer = []
# One-knob convenience (ADR 0006 D2): every OS L3 backend (each inert off its
# target OS, so a CI matrix can turn them all on).
os-sandbox = ["linux-landlock", "macos-seatbelt", "windows-appcontainer"]
# Production Ed25519 `DischargeVerifier` (`Ed25519Verifier`) for the step-up
# surface. Off by default to keep core lean; enable it for the software /
# OpenSSH `ed25519-sk`-style passkey verification path (raw Ed25519 assertions
# over the step-up challenge). Pulls `ed25519-dalek`. ADR 0007.
verifier-ed25519 = ["dep:ed25519-dalek"]
# Production WebAuthn/CTAP2 `DischargeVerifier` (`WebAuthnVerifier`) for the
# Passkey step-up tier. Parses a WebAuthn assertion (clientDataJSON +
# authenticatorData + EdDSA signature), checks the UP/UV flag bits and binds the
# assertion to the gate-recomputed challenge. Off by default; pulls
# `ed25519-dalek` (EdDSA assertions) + `sha2` (SHA-256 over clientDataJSON).
# ADR 0007. agent-bridle#72.
verifier-webauthn = ["dep:ed25519-dalek", "dep:sha2"]
# ES256 (COSE alg -7) passkey verifier — most platform passkeys sign ECDSA-P256,
# not EdDSA, so this is what makes real phone/laptop hardware work. Shares the
# `verifier-webauthn` gating; adds `p256` (ECDSA verify) + `sha2`. Off by default.
# agent-bridle#295.
verifier-webauthn-es256 = ["dep:p256", "dep:sha2"]
# `spawn-tokio` exposes `ConfinedCommand::spawn_tokio` (Unix): the SAME confined
# spawn as `spawn` (identical admission-check / OS-sandbox / env-scrub), but the
# child's stdio is returned as tokio-native pipe handles wrapped in a
# kill-on-drop guard — for an async host such as an MCP-server stdio transport
# (newt Leg 3, #1180). Pulls an optional tokio dep; off by default so a
# non-async embedder builds core with no tokio in the graph.
spawn-tokio = ["dep:tokio"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
async-trait = { workspace = true }
agent-mesh-protocol = { workspace = true }

# Optional: the production `Ed25519Verifier`, gated by `verifier-ed25519`. NOT in
# the default build — core stays lean (`cargo build` with no features does not
# compile it). Already in the lockfile (transitive via agent-mesh-protocol). The
# step-up tests sign discharges with it too, so the step-up crypto tests compile
# only under `--features verifier-ed25519` (CI's `--all-features` matrix runs them).
ed25519-dalek = { version = "2", optional = true }

# Optional: SHA-256 over `clientDataJSON` for the WebAuthn verifier, gated by
# `verifier-webauthn`. Already in the lockfile (transitive via ed25519-dalek), so
# enabling the feature pulls nothing new.
sha2 = { version = "0.10", optional = true }

# Optional: P-256 ECDSA verification for the ES256 WebAuthn verifier, gated by
# `verifier-webauthn-es256`. `default-features = false` + `ecdsa` keeps it lean
# (verification + deterministic RFC6979 signing for tests; no PEM/PKCS8).
p256 = { version = "0.13", optional = true, default-features = false, features = ["ecdsa"] }

# Optional: tokio-native pipe ends for `ConfinedCommand::spawn_tokio`, gated by
# `spawn-tokio`. Inherits the workspace tokio features (rt/macros/…) and adds
# `net` (`tokio::net::unix::pipe`, the std-fd → async-pipe bridge) + `io-util`
# (the async read/write ext traits the tests exercise). Unix-only in use (the
# API is `cfg(unix)`); on other targets the dep is inert. NOT in the default
# build — core stays tokio-free unless the feature asks for it.
tokio = { workspace = true, optional = true, features = ["net", "io-util"] }

# Landlock is Linux-only; gate the dep on the target so enabling the feature on
# macOS/Windows does not try to build it. Used only under
# cfg(all(target_os = "linux", feature = "linux-landlock")).
[target.'cfg(target_os = "linux")'.dependencies]
landlock = { version = "0.4", optional = true }
