[package]
name = "agent-bridle-jaild"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Privileged Tier-1.5 mount-namespace jail for agent-bridle program-identity confinement (ADR 0013 D4 / #109)."

[dependencies]
agent-bridle-core = { workspace = true }
# The wire protocol (JailRequest/JailResponse) carries the authority `Caveats`,
# which is serde-serializable; framed JSON over a Unix socket.
serde = { workspace = true }
serde_json = { workspace = true }

# Linux-only: the namespace/mount/pivot_root syscalls. `libc` is already in the
# lockfile (transitive via the Landlock backend), so this adds no new dependency.
# The unsafe surface is confined to this crate (core forbids unsafe); on every
# other OS the crate compiles to an honest "unsupported" stub.
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
