[package]
name = "agent-bridle-tool-shell"
# argv + safe-subset engine (ADR 0005): agent-bridle is the exec funnel — it
# parses the request itself, checks the exec/fs leash, spawns directly, and
# refuses the dynamic constructs by design. L2 convenience; the L3 boundary is
# deferred (agent-bridle#35) so runs are honestly advisory (sandbox_kind=None).
# Incremental build tracked on agent-bridle#34; brush-bridle-core is the
# deferred, reversible full-bash alternative engine (ADR 0005 D4, #20).
description = "Capability-confined shell tool for agent-bridle (argv + safe-subset engine)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
# `shell` is on by default so agent-bridle's registry() includes the tool.
# It pulls tokio (spawn_blocking + timeout) for confined execution.
default = ["shell"]
shell = ["dep:tokio"]
# Kernel-enforced L3 backstop (Linux). The engine applies the Landlock fs_write
# ruleset before spawning when fs_write is restricted (agent-bridle#35); off this
# build/OS it is the honest advisory None (ADR 0005 / ADR 0006). Read/exec/net
# axes (#31) and macOS/Windows backends (#50/#51) are follow-ups.
linux-landlock = ["agent-bridle-core/linux-landlock"]

[dependencies]
agent-bridle-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, optional = true }

# brush deps — intentionally absent. `brush-bridle-core` (a renamed brush fork
# published to crates.io) is the DEFERRED, REVERSIBLE full-bash alternative
# engine behind the same registry seam (ADR 0005 D4); it would be added under
# its own optional feature when adopted, not restored here. See agent-bridle#20.

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
