[package]
name = "agent-bridle-tool-shell"
# argv + safe-subset engine (ADR 0005): agent-bridle is the exec funnel — it
# parses the request itself, checks the exec/fs leash, spawns directly, and
# refuses the dynamic constructs by design. L2 convenience; the L3 boundary is
# deferred (agent-bridle#35) so runs are honestly advisory (sandbox_kind=None).
# Incremental build tracked on agent-bridle#34; brush-bridle-core is the
# deferred, reversible full-bash alternative engine (ADR 0005 D4, #20).
description = "Capability-confined shell tool for agent-bridle (argv + safe-subset engine)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# The live egress-audit monitor (#124, ADR 0016). Needs the `shell` feature (for
# the `NetAuditEvent` type it renders), so it is not built in a `shell`-less build.
[[bin]]
name = "bridle-netmon"
required-features = ["shell"]

[features]
# `shell` is on by default so agent-bridle's registry() includes the tool.
# It pulls tokio (spawn_blocking + timeout) for confined execution.
default = ["shell"]
shell = ["dep:tokio"]
# The sandboxed-host engine (ADR 0019 / #194): a second, complementary engine
# that runs `/bin/sh -c` with the whole tree inside the L3 jail (no L2 parsing).
# Opt-in; the embedder registers it instead of the safe-subset ShellTool. Pulls
# tokio (spawn_blocking) like `shell`; independent of the safe-subset modules.
host-shell = ["dep:tokio"]
# Kernel-enforced L3 backstop (Linux). The engine applies the Landlock fs_write
# ruleset before spawning when fs_write is restricted (agent-bridle#35); off this
# build/OS it is the honest advisory None (ADR 0005 / ADR 0006). Exec/net axes
# (#31/#57) and the Windows backend (#51) are follow-ups.
linux-landlock = ["agent-bridle-core/linux-landlock"]
# Kernel-enforced L3 backstop (macOS). When a filesystem axis is restricted the
# engine wraps each spawned stage in `sandbox-exec` with an SBPL profile derived
# from the caveats (agent-bridle#50, ADR 0006/0009); off this build/OS it is the
# honest advisory None. Confines fs_write + fs_read; exec/net are follow-ups.
macos-seatbelt = ["agent-bridle-core/macos-seatbelt"]
# Windows AppContainer backend marker (agent-bridle#51). Process-launch wiring
# requires a Windows CreateProcess launcher because AppContainer is a startup
# attribute, not a current-thread sandbox like Landlock.
windows-appcontainer = ["agent-bridle-core/windows-appcontainer"]
os-sandbox = ["linux-landlock", "macos-seatbelt", "windows-appcontainer"]

[dependencies]
agent-bridle-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, optional = true }

# brush deps — intentionally absent. `brush-bridle-core` (a renamed brush fork
# published to crates.io) is the DEFERRED, REVERSIBLE full-bash alternative
# engine behind the same registry seam (ADR 0005 D4); it would be added under
# its own optional feature when adopted, not restored here. See agent-bridle#20.

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
